--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7e13a27e",
+   "id": "681e47bb",
    "metadata": {},
    "source": [
     "# <center> WEBSCRAPING WITH PYTHON <center>"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "de429a28",
+   "metadata": {},
+   "source": [
+    "So for this project I'm going to use (\"https://pythonhow.com/example.html\") this example webpage. It is a basic html page and its easy for begainers "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8263c30d",
+   "id": "9314a06f",
    "metadata": {},
    "outputs": [],
    "source": []
