--- a/Main.ipynb
+++ b/Main.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 61,
    "id": "4ddc3e06",
    "metadata": {},
    "outputs": [],
@@ -38,20 +38,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 80,
    "id": "7bb5d8c8",
    "metadata": {},
    "outputs": [],
    "source": [
     "#r = requests.get(\"https://pythonhow.com/example.html\")\n",
-    "URL = 'https://www.facebook.com/'\n",
+    "URL = 'https://www.salariagroup.com/'\n",
     "page = requests.get(URL)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "7a71aef4",
+   "execution_count": 81,
+   "id": "c855a2f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 82,
    "id": "bc34a4ec",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 83,
    "id": "caefd615",
    "metadata": {},
    "outputs": [],
@@ -89,14 +89,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6f62b6d",
+   "id": "e16e1310",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 84,
    "id": "385ce042",
    "metadata": {},
    "outputs": [
