--- a/Main.ipynb
+++ b/Main.ipynb
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1c6075bc",
+   "id": "ed5990f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "ed792530",
    "metadata": {},
    "outputs": [
@@ -212,6 +212,8 @@
       "2701WarAdmiralDr\n",
       "RockSpringsWY82901\n",
       "3\n",
+      "None\n",
+      "None\n",
       "$205,000\n",
       "1021PilotButte\n",
       "RockSpringsWY82901\n",
@@ -229,6 +231,7 @@
       "RockSpringsWY82901\n",
       "2\n",
       "1\n",
+      "None\n",
       "$179,900\n",
       "6108WildBuffaloFoothillBlvd.\n",
       "RockSpringsWY82901\n",
@@ -252,11 +255,13 @@
       "RockSpringsWY82901\n",
       "3\n",
       "1\n",
+      "None\n",
       "$225,000\n",
       "420Soulsby\n",
       "RockSpringsWY82901\n",
       "5\n",
-      "1\n"
+      "1\n",
+      "None\n"
      ]
     }
    ],
@@ -269,16 +274,16 @@
     "    try:\n",
     "        print(item.find(\"div\",{\"class\",\"property-baths\"}).find(\"strong\").text.replace(\"\\n\",\"\").replace(\" \",\"\")) # bath\n",
     "    except:\n",
-    "        pass\n",
+    "        print(None)\n",
     "    try:\n",
     "        print(item.find(\"div\",{\"class\",\"property-sqft\"}).text.replace(\"\\n\",\"\").replace(\" \",\"\")) # square.ft\n",
     "    except:\n",
-    "        pass"
+    "        print(None)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dbf7f6d6",
+   "id": "d1a6964d",
    "metadata": {},
    "source": [
     "###### So, here we scraped all the data of page"
@@ -287,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "808486cd",
+   "id": "e8ba74f5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -295,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eab37d5e",
+   "id": "c8f999b5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -303,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "639d7823",
+   "id": "0a740047",
    "metadata": {},
    "outputs": [],
    "source": []
