--- a/Main.ipynb
+++ b/Main.ipynb
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ed5990f5",
+   "id": "e6ae93aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,9 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "ed792530",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -283,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1a6964d",
+   "id": "a2e9979d",
    "metadata": {},
    "source": [
     "###### So, here we scraped all the data of page"
@@ -292,23 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8ba74f5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8f999b5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a740047",
+   "id": "8473b3c4",
    "metadata": {},
    "outputs": [],
    "source": []
