--- a/Main.ipynb
+++ b/Main.ipynb
@@ -81,13 +81,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "4d001db3",
    "metadata": {},
    "outputs": [],
    "source": [
     "all = soup.find_all(\"div\",{\"class\":\"property-card\"})\n",
-    "prop_info = soup.find_all(\"div\",{\"class\":\"pdp-info\"})"
+    "prop_info = soup.find_all(\"div\",{\"id\":\"pdp-parent-container\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "19cdc62a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<div data-usagetrack-group=\"Property Results\" id=\"pdp-parent-container\">\n",
+       "<div id=\"pdp-container\">\n",
+       "</div>\n",
+       "<button data-usagetrack-click=\"Previous Listing\" id=\"pdp-prev-button\">Prev Listing</button>\n",
+       "<button data-usagetrack-click=\"Next Listing\" id=\"pdp-next-button\">Next Listing</button>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prop_info[0]"
    ]
   },
   {
@@ -366,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7b9ceaf9",
+   "id": "c6e9e112",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e631d2c2",
+   "id": "2f02384c",
    "metadata": {},
    "outputs": [],
    "source": []
