--- a/Main.ipynb
+++ b/Main.ipynb
@@ -201,13 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 164,
    "id": "ed792530",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "l=[]\n",
     "for item in all:\n",
     "    d={}\n",
     "    d[\"Price\"] = item.find(\"a\",{\"class\",\"listing-price\"}).text.replace(\"\\n\",\"\").replace(\" \",\"\") #price\n",
@@ -215,27 +216,96 @@
     "    d[\"City\"] = item.find(\"div\",{\"class\",\"property-city\"}).text.replace(\"\\n\",\"\").replace(\" \",\"\") # City\n",
     "    d[\"Beds\"] = item.find(\"div\",{\"class\",\"property-beds\"}).find(\"strong\").text.replace(\"\\n\",\"\").replace(\" \",\"\") # BED\n",
     "    try:\n",
-    "        print(item.find(\"div\",{\"class\",\"property-baths\"}).find(\"strong\").text.replace(\"\\n\",\"\").replace(\" \",\"\")) # bath\n",
+    "        d[\"bed\"] = item.find(\"div\",{\"class\",\"property-baths\"}).find(\"strong\").text.replace(\"\\n\",\"\").replace(\" \",\"\") # bath\n",
     "    except:\n",
-    "        print(None)\n",
+    "        d[\"bed\"] = None\n",
     "    try:\n",
-    "        print(item.find(\"div\",{\"class\",\"property-sqft\"}).text.replace(\"\\n\",\"\").replace(\" \",\"\")) # square.ft\n",
+    "        d[\"SQFT\"] = item.find(\"div\",{\"class\",\"property-sqft\"}).text.replace(\"\\n\",\"\").replace(\" \",\"\") # square.ft\n",
     "    except:\n",
-    "        print(None)"
+    "        d[\"SQFT\"] = None\n",
+    "    \n",
+    "    l.append(d)\n",
+    "    "
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a2e9979d",
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "e3abd1ad",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Price': '$472,500',\n",
+       "  'Address': '2701WarAdmiralDr',\n",
+       "  'City': 'RockSpringsWY82901',\n",
+       "  'Beds': '3',\n",
+       "  'bed': None,\n",
+       "  'SQFT': None},\n",
+       " {'Price': '$205,000',\n",
+       "  'Address': '1021PilotButte',\n",
+       "  'City': 'RockSpringsWY82901',\n",
+       "  'Beds': '3',\n",
+       "  'bed': '2',\n",
+       "  'SQFT': '1,269sq.ft'},\n",
+       " {'Price': '$310,000',\n",
+       "  'Address': '2005ArthurAve',\n",
+       "  'City': 'RockSpringsWY82901',\n",
+       "  'Beds': '3',\n",
+       "  'bed': '3',\n",
+       "  'SQFT': '1,924sq.ft'},\n",
+       " {'Price': '$150,000',\n",
+       "  'Address': '1017ArapahoeStreet',\n",
+       "  'City': 'RockSpringsWY82901',\n",
+       "  'Beds': '2',\n",
+       "  'bed': '1',\n",
+       "  'SQFT': None},\n",
+       " {'Price': '$179,900',\n",
+       "  'Address': '6108WildBuffaloFoothillBlvd.',\n",
+       "  'City': 'RockSpringsWY82901',\n",
+       "  'Beds': '3',\n",
+       "  'bed': '3',\n",
+       "  'SQFT': '1,693sq.ft'},\n",
+       " {'Price': '$174,900',\n",
+       "  'Address': '2401LittleMoonTrail',\n",
+       "  'City': 'RockSpringsWY82901',\n",
+       "  'Beds': '3',\n",
+       "  'bed': '2',\n",
+       "  'SQFT': '1,482sq.ft'},\n",
+       " {'Price': '$139,000',\n",
+       "  'Address': '1307W2ndSt',\n",
+       "  'City': 'RockSpringsWY82901',\n",
+       "  'Beds': '3',\n",
+       "  'bed': '1',\n",
+       "  'SQFT': '1,342sq.ft'},\n",
+       " {'Price': '$245,000',\n",
+       "  'Address': '344PStreet',\n",
+       "  'City': 'RockSpringsWY82901',\n",
+       "  'Beds': '3',\n",
+       "  'bed': '1',\n",
+       "  'SQFT': None},\n",
+       " {'Price': '$225,000',\n",
+       "  'Address': '420Soulsby',\n",
+       "  'City': 'RockSpringsWY82901',\n",
+       "  'Beds': '5',\n",
+       "  'bed': '1',\n",
+       "  'SQFT': None}]"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "###### So, here we scraped all the data of page now we will arange it in a Pandas Dataframe"
+    "l"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3abd1ad",
+   "id": "62f187fd",
    "metadata": {},
    "outputs": [],
    "source": []
