--- a/Main.ipynb
+++ b/Main.ipynb
@@ -178,20 +178,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 166,
    "id": "e141f96c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-149-0e98aa669a0f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mall\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"a\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m\"class\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;34m\"listing-price\"\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"\\n\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\" \"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m# used replace() to remove all the empty spaces\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "'$472,500'"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -201,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 167,
    "id": "ed792530",
    "metadata": {
     "scrolled": true
@@ -230,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 172,
    "id": "e3abd1ad",
    "metadata": {},
    "outputs": [
@@ -293,7 +292,7 @@
        "  'SQFT': None}]"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,9 +302,201 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5dd7852e",
+   "metadata": {},
+   "source": [
+    "#### Now, arrange this data in pandas dataframe to export as a CV file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "1a428388",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "d1a01835",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.DataFrame(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "164efd21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Beds</th>\n",
+       "      <th>bed</th>\n",
+       "      <th>SQFT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>$472,500</td>\n",
+       "      <td>2701WarAdmiralDr</td>\n",
+       "      <td>RockSpringsWY82901</td>\n",
+       "      <td>3</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>$205,000</td>\n",
+       "      <td>1021PilotButte</td>\n",
+       "      <td>RockSpringsWY82901</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1,269sq.ft</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>$310,000</td>\n",
+       "      <td>2005ArthurAve</td>\n",
+       "      <td>RockSpringsWY82901</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1,924sq.ft</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>$150,000</td>\n",
+       "      <td>1017ArapahoeStreet</td>\n",
+       "      <td>RockSpringsWY82901</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>$179,900</td>\n",
+       "      <td>6108WildBuffaloFoothillBlvd.</td>\n",
+       "      <td>RockSpringsWY82901</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1,693sq.ft</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>$174,900</td>\n",
+       "      <td>2401LittleMoonTrail</td>\n",
+       "      <td>RockSpringsWY82901</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1,482sq.ft</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>$139,000</td>\n",
+       "      <td>1307W2ndSt</td>\n",
+       "      <td>RockSpringsWY82901</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1,342sq.ft</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>$245,000</td>\n",
+       "      <td>344PStreet</td>\n",
+       "      <td>RockSpringsWY82901</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>$225,000</td>\n",
+       "      <td>420Soulsby</td>\n",
+       "      <td>RockSpringsWY82901</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Price                       Address                City Beds   bed  \\\n",
+       "0  $472,500              2701WarAdmiralDr  RockSpringsWY82901    3  None   \n",
+       "1  $205,000                1021PilotButte  RockSpringsWY82901    3     2   \n",
+       "2  $310,000                 2005ArthurAve  RockSpringsWY82901    3     3   \n",
+       "3  $150,000            1017ArapahoeStreet  RockSpringsWY82901    2     1   \n",
+       "4  $179,900  6108WildBuffaloFoothillBlvd.  RockSpringsWY82901    3     3   \n",
+       "5  $174,900           2401LittleMoonTrail  RockSpringsWY82901    3     2   \n",
+       "6  $139,000                    1307W2ndSt  RockSpringsWY82901    3     1   \n",
+       "7  $245,000                    344PStreet  RockSpringsWY82901    3     1   \n",
+       "8  $225,000                    420Soulsby  RockSpringsWY82901    5     1   \n",
+       "\n",
+       "         SQFT  \n",
+       "0        None  \n",
+       "1  1,269sq.ft  \n",
+       "2  1,924sq.ft  \n",
+       "3        None  \n",
+       "4  1,693sq.ft  \n",
+       "5  1,482sq.ft  \n",
+       "6  1,342sq.ft  \n",
+       "7        None  \n",
+       "8        None  "
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "d3b1c17e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv(\"Output.csv\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62f187fd",
+   "id": "a24edf32",
    "metadata": {},
    "outputs": [],
    "source": []
